--- a/baru.html
+++ b/baru.html
@@ -1,2 +1,44 @@
-baru
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>baru html</title>
+    <link rel="stylesheet" href="css/main.css">
+</head>
 
+<body>
+
+<h1>Hello world</h1>
+<p>This is my first website!</p>
+
+<div><a href="http://vodafone.cz">Vodafone</a></div>
+
+<base>
+<header>
+    
+<nav class="container">
+<a href="#">home</a>>
+<a href="#mission">mission</a>>
+<a href="#about-us">about us</a>>
+<a href="#team">our team</a>>
+<a href="#contact">contact</a>>
+
+</header>
+
+<section class="mission">
+    <div class="container">
+    </div>
+    <h3>Mission</h3>
+    <p>The chair of the European Parliament election observation mission was Paweł Kowal.</p>
+</section>
+
+<section class="team">
+    <div class="container">
+    </div>
+    <h3>Team</h3>
+    <p>This is a team for which you can vote with confidence, a team that deserves your support.</p>
+</section>
+<img src="Barca/obrazek.jpg"
+
+</body>
+</html>
